# mmrl_backend

./: .gitignore  pyproject.toml
src/mmrl/api/: __init__.py
src/mmrl/api/routes/: health.py  runs.py
src/mmrl/app/: __init__.py  main.py
src/mmrl/core/config/: settings.py
src/mmrl/core/engine/: engine.py  lifecycle.py  router.py  state.py  tick_driver.py
src/mmrl/core/events/: base.py  bus.py  marketdata.py  orders.py  system.py
src/mmrl/core/logging/: setup.py
src/mmrl/core/run/: artifacts.py  assembly.py  eventlog.py  factory.py  manager.py  persist.py  registry.py  spec.py
src/mmrl/evaluation/: risk_inventory.py
src/mmrl/execution/model/: fill_model.py
src/mmrl/execution/oms/: orders.py  positions.py  risk.py  risk_component.py
src/mmrl/execution/paper/: adapter.py
src/mmrl/marketdata/orderbook/: adapter.py  book.py  delta.py  normalize.py
src/mmrl/marketdata/replay/: adapter.py  datasource.py  jsonl_datasource.py
src/mmrl/storage/: jsonl.py  parquet.py
src/mmrl/strategies/: base.py
src/mmrl/strategies/baselines/: fixed_spread.py
tests/integration/: test_fixed_spread_cancel_replace.py  test_replay_smoke.py  test_risk_rejects.py
