[project]
name = "mmrl"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "MalekOuaida",email = "malek.ouaida@std.balamand.edu.lb"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
